додоє більші відстані для елементів модалки

--- a/src/partials/neader-hero.html
+++ b/src/partials/neader-hero.html
@@ -150,27 +150,38 @@
                         <span class="label-descr">Pick-up Points Address</span>              
                     </label>
                     <p class="order_text">Make your choise:</p>
-                    <div role="group" class="order-choise">
+                     <div  class="order-choise">
                                          
-                        <label class="label order-choise_label">
-                            <input  name="product" type="checkbox" value="icecream" class="order-choise_check"/>
-                            <span class="order-choise_details">Ice-cream</span>
-                            <input  type="number" name="icecream-number" class="portions-number"/>
-                            <span class="order-choise_portions">Portions</span>
-                        </label>
-                        <label class="label order-choise_label">
-                            <input  name="product" type="checkbox" value="ice_coffee" class="order-choise_check"/>
-                            <span class="order-choise_details">Ice-coffe</span>
-                            <input  type="number" name="coffee-number" class="portions-number"/>
-                            <span class="order-choise_portions">Portions</span>
-                        </label>
-                        <label class="label order-choise_label">
-                            <input  name="product" type="checkbox" value="milkshakes" class="order-choise_check"/>
-                            <span class="order-choise_details">Milkshakes</span>
-                            <input  type="number" name="milshakes-number" class="portions-number"/>
-                            <span class="order-choise_portions">Portions</span>
-                        </label>
-                                               
+                        <div class="order-choise_label">
+                            <label class="choise-label">
+                                <input  name="product" type="checkbox" value="icecream" class="order-choise_check"/>
+                                <span class="order-choise_details">Ice-cream</span>
+                            </label>
+                            <label class="choise-label">
+                                <input  type="number" name="icecream-number" class="portions-number"/>
+                                <span class="order-choise_portions">Portions</span>
+                            </label>
+                        </div>
+                        <div class="order-choise_label">
+                            <label class="choise-label">
+                                <input  name="product" type="checkbox" value="ice_coffee" class="order-choise_check"/>
+                                <span class="order-choise_details">Ice-coffe</span>
+                            </label>
+                            <label class="choise-label">
+                                <input  type="number" name="coffee-number" class="portions-number"/>
+                                <span class="order-choise_portions">Portions</span>
+                            </label>
+                        </div>
+                        <div class="order-choise_label">
+                            <label class="choise-label">
+                                <input  name="product" type="checkbox" value="milkshakes" class="order-choise_check"/>
+                                <span class="order-choise_details">Milkshakes</span>
+                            </label>
+                            <label class="choise-label">
+                                <input  type="number" name="milshakes-number" class="portions-number"/>
+                                <span class="order-choise_portions">Portions</span>
+                            </label> 
+                        </div>                       
                     </div>
                     <p class="warning">Your order is reserved <strong>for 24 hours; if you don't make it in by then, we'll cancel the order and refund your method of payment</strong></p>
                     <a href="https://www.portmone.com.ua/" class="btn2 pay-btn">Pay</a>
@@ -215,26 +226,38 @@
                         <span class="label-descr">Pick-up Points Address</span>              
                     </label>
                     <p class="order_text">Make your choise:</p>
-                    <div role="group" class="order-choise">
+                    <div class="order-choise">
                                          
-                        <label class="label order-choise_label">
-                            <input  name="product" type="checkbox" value="icecream" class="order-choise_check"/>
-                            <span class="order-choise_details">Ice-cream</span>
-                            <input  type="number" name="icecream-number" class="portions-number"/>
-                            <span class="order-choise_portions">Portions</span>
-                        </label>
-                        <label class="label order-choise_label">
-                            <input  name="product" type="checkbox" value="ice_coffee" class="order-choise_check"/>
-                            <span class="order-choise_details">Ice-coffe</span>
-                            <input  type="number" name="coffee-number" class="portions-number"/>
-                            <span class="order-choise_portions">Portions</span>
-                        </label>
-                        <label class="label order-choise_label">
-                            <input  name="product" type="checkbox" value="milkshakes" class="order-choise_check"/>
-                            <span class="order-choise_details">Milkshakes</span>
-                            <input  type="number" name="milshakes-number" class="portions-number"/>
-                            <span class="order-choise_portions">Portions</span>
-                        </label>                        
+                        <div class="order-choise_label">
+                            <label class="choise-label">
+                                <input  name="product" type="checkbox" value="icecream" class="order-choise_check"/>
+                                <span class="order-choise_details">Ice-cream</span>
+                            </label>
+                            <label class="choise-label">
+                                <input  type="number" name="icecream-number" class="portions-number"/>
+                                <span class="order-choise_portions">Portions</span>
+                            </label>
+                        </div>
+                        <div class="order-choise_label">
+                            <label class="choise-label">
+                                <input  name="product" type="checkbox" value="ice_coffee" class="order-choise_check"/>
+                                <span class="order-choise_details">Ice-coffe</span>
+                            </label>
+                            <label class="choise-label">
+                                <input  type="number" name="coffee-number" class="portions-number"/>
+                                <span class="order-choise_portions">Portions</span>
+                            </label>
+                        </div>
+                        <div class="order-choise_label">
+                            <label class="choise-label">
+                                <input  name="product" type="checkbox" value="milkshakes" class="order-choise_check"/>
+                                <span class="order-choise_details">Milkshakes</span>
+                            </label>
+                            <label class="choise-label">
+                                <input  type="number" name="milshakes-number" class="portions-number"/>
+                                <span class="order-choise_portions">Portions</span>
+                            </label> 
+                        </div>                       
                     </div>
                     <p class="warning">Your order is reserved <strong>for 24 hours; if you don't make it in by then, we'll cancel the order and refund your method of payment</strong></p>
                     <a href="https://www.portmone.com.ua/" class="btn2 pay-btn">Pay</a>                                           
