--- a/src/sass/layout/_menu.scss
+++ b/src/sass/layout/_menu.scss
@@ -471,24 +471,23 @@
 }
 
 .order-choise {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    
+    width: 100%;
 
-    width: 280px;
-
+    margin-bottom: 30px;
     margin-right: auto;
     margin-left: auto;
    
+    @media screen  and (min-width:768px) {
+        width: 80%;
+ 
+    }
     
    
 
     &_label {
         display: flex;        
         align-items: center;
-        justify-content: space-between;
+        
 
         width: 100%;
 
@@ -497,9 +496,10 @@
    
     &_details {
         
-        margin-left: 10px;
+        margin-left: 10px; 
 
-        font-size: 18;
+
+        font-size: 14;
 
         @media screen  and (min-width:768px) {
             font-size: 32;       
@@ -511,13 +511,23 @@
    
     &_portions {
         margin-left: 10px;
-        font-size: 18;
+        font-size: 14;
+
+        display: flex;
+        width: 50%;
 
         @media screen  and (min-width:768px) {
             font-size: 32;       
      
-         }
+        }
     }
+}
+.choise-label {
+    width: 45%;
+    display: flex;
+    align-items: center;
+
+    margin-bottom: 10px;
 }
 
 
@@ -535,7 +545,12 @@
 
     text-align: center;
 
-    margin-bottom: 5px;
+    margin-bottom: 10px;
+
+    @media screen  and (min-width:768px) {
+        margin-bottom: 30px;      
+ 
+    }
 }
 .pay-btn {
 
