--- a/src/sass/layouts/_how-made.scss
+++ b/src/sass/layouts/_how-made.scss
@@ -10,6 +10,10 @@ picture {
   }
 }
 
+.hm_container {
+  overflow: hidden;
+}
+
 .section_how_made {
   padding-top: 125px;
   @include for-size(tablet) {
