--- a/src/sass/layouts/_slider.scss
+++ b/src/sass/layouts/_slider.scss
@@ -77,6 +77,7 @@
   &-subtitle {
     margin-left: auto;
     margin-right: auto;
+    margin-bottom: 35px;
     margin-top: 30px;
     padding: 0;
     font-family: 'DM Sans';
@@ -99,6 +100,7 @@
     &::before {
       display: block;
       content: '';
+      margin-top: 58px;
       margin-bottom: 18px;
       margin-left: auto;
       margin-right: auto;
@@ -117,24 +119,40 @@
       }
     }
 
-    &::after {
-      display: block;
-      content: '';
-      margin-top: 30px;
-      margin-left: auto;
-      margin-right: auto;
-      height: 12px;
-      background-image: url(../images/bitmap/slider/house-dots.png);
-      background-repeat: no-repeat;
-      background-position: center;
+     }
+}
 
-      @media screen and (min-width: $tablet) {
-        margin-top: 35px;
-      }
+.radio-buttons {
+  display: flex;
+  justify-content: center;
+  margin-left: auto;
+  margin-right: auto;
+}
 
-      @media screen and (min-width: $desktop) {
-        margin-top: 35px;
-      }
-    }
+.rad-btn {
+  display: none;
+}
+
+.rad-btn + label {
+  display: block;
+  width: 12px;
+  height: 12px;
+  cursor: pointer;
+  border-radius: 50%;
+  background-color: #d9d9d9;
+
+  &:not(:last-child) {
+    margin-right: 18px;
   }
+}
+
+.rad-btn:checked + label {
+  display: block;
+  width: 12px;
+  height: 12px;
+  border-radius: 0;
+  background-color: transparent;
+  background-image: url('./../images/vector/house.svg');
+  background-position: center;
+  background-repeat: no-repeat;
 }
