--- a/src/partials/slider.html
+++ b/src/partials/slider.html
@@ -1,6 +1,6 @@
 <!-- Slider section -->
-<section class="slider-section">
-  <div class="container">
+<section id="#slider" class="slider-section">
+  <div class="slider-container">
     <ul class="slider-list">
       <li class="slider-list-item girl-1">
         <div class="slider-list-text">
