--- a/src/sass/layout/_hero.scss
+++ b/src/sass/layout/_hero.scss
@@ -1,374 +1,345 @@
 .hero {
-    display: flex;
+  display: flex;
 
-    justify-content: space-between;
+  justify-content: space-between;
 
-    padding-top: 9px;
+  padding-top: 9px;
 
-    @media screen  and (min-width:768px){
-        padding-left: 19px;
-        padding-right: 8px;
-    }
+  @media screen and (min-width: 768px) {
+    padding-left: 19px;
+    padding-right: 8px;
+  }
 
-
-    @media screen  and (min-width:1200px){
-        padding-top: 3px;
-        padding-right: 0px;
-        padding-left: 57px;
-    }
-
+  @media screen and (min-width: 1280px) {
+    padding-top: 3px;
+    padding-right: 0px;
+    padding-left: 57px;
+  }
 }
 
-
 .title-block {
-    @media screen  and (max-width: 767px){
-        margin-top: 137px;
-    }
-    
-    @media screen  and (min-width:768px) and (max-width: 1199px){
-        padding-top: 3px;
-    }
+  @media screen and (max-width: 767px) {
+    margin-top: 137px;
+  }
 
-    @media screen  and (min-width:1200px){
-        padding-top: 84px;
-        padding-left: 38px;
-    }
+  @media screen and (min-width: 768px) and (max-width: 1279px) {
+    padding-top: 3px;
+  }
+
+  @media screen and (min-width: 1280px) {
+    padding-top: 84px;
+    padding-left: 38px;
+  }
 }
 
 .hero-title {
-    margin: 0;
-    padding: 0;
-    font-family: Titan One;
+  margin: 0;
+  padding: 0;
+  font-family: Titan One;
 
-    font-size: 26px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 1.1538;
-    letter-spacing: 0.04em;
-    text-transform: uppercase;
+  font-size: 26px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1.1538;
+  letter-spacing: 0.04em;
+  text-transform: uppercase;
 
-    color: $text-color-hero;
+  color: $text-color-hero;
 
-    &--accent {
-        color: $title-text-color;
-        font-size: 48px;
-        line-height: 0.955;
+  &--accent {
+    color: $title-text-color;
+    font-size: 48px;
+    line-height: 0.955;
 
-        @media screen  and (min-width:768px){
-            font-size: 34px;
-            line-height: 0.905;
-        }
-        @media screen  and (min-width:1200px){
-            font-size: 58px;
-        } 
+    @media screen and (min-width: 768px) {
+      font-size: 34px;
+      line-height: 0.905;
     }
-
-    @media screen  and (min-width:768px) {
-        font-size: 22px;
-        line-height: 1.1363;
+    @media screen and (min-width: 1280px) {
+      font-size: 58px;
     }
-    @media screen  and (min-width:1200px) {
-        font-size: 38px;
-        line-height: 1.145;
-    }
+  }
 
+  @media screen and (min-width: 768px) {
+    font-size: 22px;
+    line-height: 1.1363;
+  }
+  @media screen and (min-width: 1280px) {
+    font-size: 38px;
+    line-height: 1.145;
+  }
 }
 
 .hero-btn-block {
-    display: flex;
+  display: flex;
 
-    margin-top: 19px;
+  margin-top: 19px;
 
-    @media screen  and (min-width:768px){
-        margin-top: 20px;
+  @media screen and (min-width: 768px) {
+    margin-top: 20px;
+  }
+
+  @media screen and (min-width: 1280px) {
+    margin-top: 25px;
+  }
+
+  & .btn {
+    margin: 0;
+    margin-right: 9.2px;
+
+    width: 61.2px;
+    height: 24px;
+
+    font-family: DM Sans;
+    font-size: 8px;
+    line-height: 1, 25;
+
+    @media screen and (min-width: 1280px) {
+      margin-right: 15px;
+
+      width: 102px;
+      height: 40px;
+
+      font-size: 14px;
+      line-height: 1, 2857;
     }
+  }
+  & .btn2 {
+    width: 82.8x;
+    height: 24px;
 
-    @media screen  and (min-width:1200px){
-        margin-top: 25px;
+    border: transparent;
+
+    font-family: DM Sans;
+    font-size: 8px;
+    line-height: 1, 25;
+
+    @media screen and (min-width: 1280px) {
+      width: 138px;
+      height: 40px;
+      font-size: 14px;
+      line-height: 1, 2857;
     }
-
-    & .btn {
-        margin: 0;
-        margin-right: 9.2px;
-
-        width: 61.2px;
-        height: 24px;
-
-        font-family: DM Sans;
-        font-size: 8px;
-        line-height: 1,25;
-
-        @media screen  and (min-width:1200px) {
-            margin-right: 15px;
-
-            width: 102px;
-            height: 40px;
-
-            font-size: 14px;
-            line-height: 1,2857;
-        }
-    }
-    & .btn2 {
-        
-        width: 82.8x;
-        height: 24px;
-
-        border: transparent;
-
-        font-family: DM Sans;
-        font-size: 8px;
-        line-height: 1,25;
-
-        @media screen  and (min-width:1200px) {
-            width: 138px;
-            height: 40px;
-            font-size: 14px;
-            line-height: 1,2857;
-        }
-    }
+  }
 }
 .bio {
-    display: none;
+  display: none;
 
-    @media screen  and (min-width:768px){
-        display: flex; 
-        align-items: flex-end;
-        margin-top: 19px; 
-        height: 126px;
-    }
-    @media screen  and (min-width:1200px){
-        margin-top: 56px;
-        height: 191px;
-    }    
+  @media screen and (min-width: 768px) {
+    display: flex;
+    align-items: flex-end;
+    margin-top: 19px;
+    height: 126px;
+  }
+  @media screen and (min-width: 1280px) {
+    margin-top: 56px;
+    height: 191px;
+  }
 }
 .milk {
-    display: block;
-    width: 120px;
-    height: 124px;
+  display: block;
+  width: 120px;
+  height: 124px;
 
-    @media screen  and (min-width:1200px){
-       width: 188px;
-       height: 191px;
-    }
-    
+  @media screen and (min-width: 1280px) {
+    width: 188px;
+    height: 191px;
+  }
 }
 .bio-eco {
-    display: none;
+  display: none;
 
-    @media screen  and (min-width:768px){
-        display: flex;  
-        flex-direction: column;
-        /*padding-top: 47px;*/
-        padding-bottom: 6px;     
-    }
-    @media screen  and (min-width:1200px){
-       //padding-top: 55px;
-        padding-bottom: 11px;   
-    }
-
+  @media screen and (min-width: 768px) {
+    display: flex;
+    flex-direction: column;
+    /*padding-top: 47px;*/
+    padding-bottom: 6px;
+  }
+  @media screen and (min-width: 1280px) {
+    //padding-top: 55px;
+    padding-bottom: 11px;
+  }
 }
 
-
 .bio-eco .btn-circle {
-    padding:0;
-    margin: 0;
-    display: flex;
-    justify-content: center;
+  padding: 0;
+  margin: 0;
+  display: flex;
+  justify-content: center;
 
-    width: 18px;
-    height: 18px;
+  width: 18px;
+  height: 18px;
 
-    border: none;
+  border: none;
 
-    @media screen  and (min-width:1200px){
-        width: 26px;
-        height: 26px;
-    }
-    
-
+  @media screen and (min-width: 1280px) {
+    width: 26px;
+    height: 26px;
+  }
 }
 
 .bio-eco-descr {
-    display: inline-block;
+  display: inline-block;
 
-    width: 120px;
+  width: 120px;
 
-    padding: 0;
-    margin: 0;
-    margin-bottom: 7px;
-    
+  padding: 0;
+  margin: 0;
+  margin-bottom: 7px;
 
-    font-family: DM Sans;
-    font-weight: 400;
-    font-size: 8px;    
-    line-height: 1.5;
-    color: $text-color-hero;
+  font-family: DM Sans;
+  font-weight: 400;
+  font-size: 8px;
+  line-height: 1.5;
+  color: $text-color-hero;
 
-    @media screen  and (min-width:1200px){
-        margin-top: 0;
-               
-        margin-bottom: 20px;
-       
-        width: 200px;
+  @media screen and (min-width: 1280px) {
+    margin-top: 0;
 
-        font-size: 14px;    
-        line-height: 1.4;
-    }
+    margin-bottom: 20px;
+
+    width: 200px;
+
+    font-size: 14px;
+    line-height: 1.4;
+  }
 }
 
 .arrow-icon {
-    
+  fill: $title-text-color;
 
-    fill: $title-text-color;
+  width: 9px;
 
-    width: 9px;
-
-    @media screen  and (min-width:1200px){
-        width: 13px;
-    }
+  @media screen and (min-width: 1280px) {
+    width: 13px;
+  }
 }
 .r-block {
-    display: none;
-    @media screen  and (min-width:768px){
-        display: block;
-    }
+  display: none;
+  @media screen and (min-width: 768px) {
+    display: block;
+  }
 
-    @media screen  and (min-width:1200px){
-        padding-top: 63px;
-    }
-    
+  @media screen and (min-width: 1280px) {
+    padding-top: 63px;
+  }
 }
 .sales-points {
-    display: none;
+  display: none;
 
-    @media screen  and (min-width:768px){
-        display: flex;
-        flex-direction: column;
-        align-items: flex-end;
+  @media screen and (min-width: 768px) {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
 
-        margin-bottom: 64px; 
-    }
-    @media screen  and (min-width:1200px){
-               
-        margin-bottom: 90px; 
-    }
+    margin-bottom: 64px;
+  }
+  @media screen and (min-width: 1280px) {
+    margin-bottom: 90px;
+  }
 }
 
-
-
 .points {
-    position: relative;
-    z-index: 10;
-    
-    width: 51px;
-    height: 43px;
+  position: relative;
+  z-index: 10;
 
-    &::before {
-        content: '';
-        position: absolute;
-        top: -10%;
-        right: -15%;
+  width: 51px;
+  height: 43px;
 
-        z-index: 1;
-               
+  &::before {
+    content: '';
+    position: absolute;
+    top: -10%;
+    right: -15%;
 
-        width: 16px;
-        height: 16px;
+    z-index: 1;
 
-        background-color: $text-color-hero;
+    width: 16px;
+    height: 16px;
 
-        border-radius: 50%;
+    background-color: $text-color-hero;
 
-        @media screen  and (min-width:1200px){
-            width: 30px;
-            height: 30px;
+    border-radius: 50%;
 
-        }
+    @media screen and (min-width: 1280px) {
+      width: 30px;
+      height: 30px;
     }
+  }
 
-    @media screen  and (min-width:1200px){
-        
-        width: 92px;
-        height: 77px;
-    }
+  @media screen and (min-width: 1280px) {
+    width: 92px;
+    height: 77px;
+  }
 
-   
-
-    /*display: flex;
+  /*display: flex;
     justify-content: center;
     flex-direction: column;*/
 
-    
-    
+  @media screen and (min-width: 1280px) {
+    height: 76x;
 
-    @media screen  and (min-width:1200px){
-        
-        height: 76x;
+    /*padding-right: 18px;*/
+  }
 
-       /*padding-right: 18px;*/
+  &-number {
+    position: relative;
 
+    z-index: 10;
+
+    margin: 0;
+
+    font-family: Titan One;
+
+    font-size: 28px;
+    line-height: 1.1428;
+
+    text-align: right;
+    letter-spacing: 0.04em;
+    text-transform: uppercase;
+
+    color: $title-text-color;
+
+    @media screen and (min-width: 1280px) {
+      font-size: 46px;
+      line-height: 1.1521;
     }
+  }
 
-    &-number{
-        position: relative;
-       
-        z-index: 10;
+  &-title {
+    margin: 0;
 
-        margin: 0;
-                                                                    
-        font-family: Titan One;
-                                                                        
-        font-size: 28px;
-        line-height: 1.1428;
-                                                                    
-        text-align: right;
-        letter-spacing: 0.04em;
-        text-transform: uppercase;
-                                                                    
-        color: $title-text-color;
+    font-family: DM Sans;
 
+    font-size: 8px;
+    line-height: 1.25;
+    text-align: right;
 
-        @media screen  and (min-width:1200px){
-            font-size: 46px;
-            line-height: 1.1521;
-        }
-    } 
+    color: $text-color-hero;
 
-    &-title{
-        margin: 0;
-        
-                                                                    
-        font-family: DM Sans;
-        
-        font-size: 8px;
-        line-height: 1.25;
-        text-align: right;
+    @media screen and (min-width: 1280px) {
+      margin-top: 2px;
 
-        color: $text-color-hero;
-
-        @media screen  and (min-width:1200px){
-            margin-top: 2px;
-
-            font-size: 14px;
-            line-height: 1.2857;
-        }
-    } 
-}   
-.caffee{
-    margin-bottom: 14px;
-
-    @media screen  and (min-width:1200px){
-        margin-bottom: 30px;
+      font-size: 14px;
+      line-height: 1.2857;
     }
+  }
+}
+.caffee {
+  margin-bottom: 14px;
+
+  @media screen and (min-width: 1280px) {
+    margin-bottom: 30px;
+  }
 }
 
 .girl {
-    display: block;
-    width: 168px;
-    height: 133px;
+  display: block;
+  width: 168px;
+  height: 133px;
 
-    @media screen  and (min-width:1200px){
-        width: 293px;
-        height: 232px;
-    }
+  @media screen and (min-width: 1280px) {
+    width: 293px;
+    height: 232px;
+  }
 }
