--- a/src/sass/layout/_menu.scss
+++ b/src/sass/layout/_menu.scss
@@ -1,272 +1,510 @@
 .head-container {
-    position: relative;
-    padding-top: 6px;
+  padding: 0;
 
-    padding-left: 20px;
+  height: 502px;
 
+  display: flex;
+  justify-content: center;
 
-    height: 502px;
+  background-color: $accent-color;
 
-    background-image: url('./../images/hero/icecream_mob.png'), url('./../images/hero/ellipse_mob.png');
-    background-repeat: no-repeat;
-    background-position: left 117px bottom 0px, top 92px right 0px;
-    
-    @media screen and (min-device-pixel-ratio: 2),
-        screen and (min-resolution: 192dpi),
-        screen and (min-resolution: 2dppx) {
-            background-image: url('./../images/hero/icecream_mob@2x.png'), url('./../images/hero/ellipse_mob@2x.png');
-    }
-    
-    background-color: $accent-color;
+  @media screen and (min-width: 1280px) {
+    padding: 0;
+    height: 665px;
+  }
 
-    @media screen  and (min-width:768px) and (max-width:1199px) {
-        padding-top: 37px;
-        padding-right: 34px;
+  @media screen and (min-width: 768px) and (max-width: 1279px) {
+    padding: 0;
+    padding-right: 34px;
 
-        height: 399px;
-
-        background-image: url('./../images/hero/icecream_tablet.png'), url('./../images/hero/ellipse_tablet.png');
-        background-repeat: no-repeat;
-        background-position: top 63px right 247px, top 31px right 137px;
-        
-        @media screen and (min-device-pixel-ratio: 2),
-            screen and (min-resolution: 192dpi),
-            screen and (min-resolution: 2dppx) {
-                background-image: url('./../images/hero/icecream_tablet@2x.png'), url('./../images/hero/ellipse_tablet@2x.png');
-        }
-    }
-
-    @media screen  and (min-width:1200px){
-        padding-top: 37px;
-        height: 665px;
-
-        padding-right: 115px;
-
-        background-image: url('./../images/hero/icecream_desktop.png'), url('./../images/hero/ellipse_desktop.png');
-        background-repeat: no-repeat;
-        background-position: top 108px right 450px, top 55px right 267px;
-        
-        @media screen and (min-device-pixel-ratio: 2),
-            screen and (min-resolution: 192dpi),
-            screen and (min-resolution: 2dppx) {
-                background-image: url('./../images/hero/icecream_desktop@2x.png'), url('./../images/hero/ellipse_desktop@2x.png');
-        }
-    }
+    height: 399px;
+  }
 }
 
+.above-container {
+  width: 320px;
 
+  padding-top: 6px;
+  padding-left: 20px;
+
+  @media screen and (max-width: 767px) {
+    background-image: url('./../images/hero/icecream_mob.png'),
+      url('./../images/hero/ellipse_mob.png');
+    background-repeat: no-repeat;
+    background-position: left 117px bottom 0px, top 92px right 0px;
+
+    /*@media screen and (min-device-pixel-ratio:2),
+            screen and (min-resolution: 192dpi),
+            screen and (min-resolution: 2dppx) {
+                background-image: url('./../images/hero/icecream_mob@2x.png'), url('./../images/hero/ellipse_mob@2x.png');
+        }*/
+  }
+
+  @media screen and (min-width: 768px) and (max-width: 1279px) {
+    width: 768px;
+    padding-top: 37px;
+
+    background-image: url('./../images/hero/icecream_tablet.png'),
+      url('./../images/hero/ellipse_tablet.png');
+    background-repeat: no-repeat;
+    background-position: top 63px right 214px, top 31px right 103px;
+
+    /*@media screen and (min-device-pixel-ratio:2),
+            screen and (min-resolution: 192dpi),
+            screen and (min-resolution: 2dppx) {
+                    background-image: url('./../images/hero/icecream_tablet@2x.png'), url('./../images/hero/ellipse_tablet@2x.png');
+        }*/
+  }
+
+  @media screen and (min-width: 1280px) {
+    width: 1280px;
+    padding-top: 37px;
+    padding-right: 115px;
+
+    background-image: url('./../images/hero/icecream_desktop.png'),
+      url('./../images/hero/ellipse_desktop.png');
+    background-repeat: no-repeat;
+    background-position: top 108px right 450px, top 55px right 267px;
+
+    /*@media screen and (min-device-pixel-ratio:2),
+            screen and (min-resolution: 192dpi),
+            screen and (min-resolution: 2dppx) {
+                    background-image: url('./../images/hero/icecream_desktop@2x.png'), url('./../images/hero/ellipse_desktop@2x.png');
+        }*/
+  }
+}
 
 .nav {
-    
-    margin-left: auto;
-    margin-right: auto;
-    
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  margin-left: auto;
+  margin-right: auto;
 
-    height: 56px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 
-    @media screen  and (min-width:768px){
-        padding-right: 19px;
-        padding-left: 19px;
-    }
-    @media screen  and (min-width:768px){
-       padding-right: 0px;
-        
-    }
-  
+  height: 56px;
+
+  @media screen and (min-width: 1280px) {
+    padding-right: 0px;
+  }
+
+  @media screen and (min-width: 768px) and (max-width: 1279px) {
+    padding-right: 0px;
+    padding-left: 19px;
+  }
 }
 
 .logo_icon {
-    display: block;
-    fill: $title-text-color; 
-    
-    width: 199px;
-    height: 50px;
+  display: block;
+  fill: $title-text-color;
+
+  width: 199px;
+  height: 50px;
 }
 .menu-btn {
-    background-color: transparent;
-    border: none;
+  background-color: transparent;
+  border: none;
 
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 
-    @media screen  and (min-width:1200px){
-        display: none;
-    }
+  @media screen and (min-width: 1280px) {
+    display: none;
+  }
 }
 .btn-container {
-    display: flex;
+  display: flex;
 }
 
 .buy-btn {
-    border: transparent;       
-    
-    font-family: DM Sans;
-    font-weight: 700;
-    font-size: 16px;
-    line-height: 1.3125;
+  border: transparent;
 
-    &--nmob {
-        display: none;
+  font-family: DM Sans;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.3125;
 
-        @media screen  and (min-width:768px){
-            display: flex;
-                    
-            padding-right: 37.23px;
-            padding-left: 37.23px;
-    
-            margin-left: 30px;
-        
-            width: 160px;
-            height: 44px;
-        
-           
-    
-            & .right-icon{
-                margin-left: 12px;
-            }
-        }
-        @media screen  and (min-width:1200px){
-            margin-right: 0px;
-        }
+  &--nmob {
+    display: none;
+
+    @media screen and (min-width: 768px) {
+      display: flex;
+
+      padding-right: 37.23px;
+      padding-left: 37.23px;
+
+      margin-left: 30px;
+
+      width: 160px;
+      height: 44px;
+
+      & .right-icon {
+        margin-left: 12px;
+      }
     }
-
-    &--mob{
-        position: relative;
-        left: 50%;
-        transform: translateX(-50%);
-    
-        margin-top: 60px;        
-
-        padding-right: 48.64px;
-        padding-left: 48.64px;    
-    
-        width: 209px;
-        height: 44px; 
-        
-        & .right-icon {              
-            margin-left: 15.77px;
-        }
+    @media screen and (min-width: 1280px) {
+      margin-right: 0px;
     }
+  }
 
+  &--mob {
+    position: relative;
+    left: 50%;
+    transform: translateX(-50%);
+
+    margin-top: 60px;
+
+    padding-right: 48.64px;
+    padding-left: 48.64px;
+
+    width: 209px;
+    height: 44px;
+
+    & .right-icon {
+      margin-left: 15.77px;
+    }
+  }
 }
 .right-icon {
-    width: 5.26px;
-    height: 9px;
+  width: 5.26px;
+  height: 9px;
 }
 
 .close-btn {
-    position: absolute;
-    top: 23px;
-    right: 28px;
+  position: absolute;
+  top: 23px;
+  right: 28px;
 
-    @media screen  and (min-width:768px){
-        right: 14px;
-    }
-
-    
+  @media screen and (min-width: 768px) {
+    right: 14px;
+  }
 }
 .open-icon {
-    width: 20px;
-    height: 12px;
+  width: 20px;
+  height: 12px;
 }
 
 .cross-icon {
-    fill: $text-color-hero;
-    width: 14px;
-    height: 14px;    
+  fill: $text-color-hero;
+  width: 14px;
+  height: 14px;
 }
 
 .mobile-menu {
-    display: none;
-     
-    position: absolute;
-    z-index: 999;
-    top: 0;
-    right: 0;
+  display: none;
 
-    opacity: 0;
-    transform: translateX(100%);
+  position: absolute;
+  z-index: 999;
+  top: 0;
+  right: 0;
+
+  opacity: 0;
+  transform: translateX(100%);
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition-delay: 450ms;
+
+  padding-bottom: 185px;
+
+  width: 78.125%;
+  height: 502px;
+
+  background-color: #e17992;
+
+  &.is-open {
+    display: block;
+    opacity: 1;
+    transform: translateX(0%);
+
     transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
     transition-delay: 450ms;
-    
-    
 
-    padding-bottom: 185px;
-
-    width: 250px;
-    height: 502px;
-
-    background-color: #E17992;
-
-    &.is-open {
-        display: block;
-        opacity: 1;
-        transform: translateX(0%);
-        
-        transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-        transition-delay: 450ms;
-
-        @media screen  and (min-width:1200px){
-            display: none;
-        }
-                   
-    }     
-    
-    @media screen  and (min-width:768px){
-        width: 254px;
-        height: 1020px;
-
+    @media screen and (min-width: 1280px) {
+      display: none;
     }
-   
+  }
 
+  @media screen and (min-width: 768px) {
+    width: 33%;
+    height: 1020px;
+  }
 }
-
-
-
 
 .mobile-nav-item {
-    padding-top: 11px;
-    padding-bottom: 13px;
-    padding-left: 21px;    
+  padding-top: 11px;
+  padding-bottom: 13px;
+  padding-left: 21px;
 
-    border: 1px solid #E18298;
+  border: 1px solid #e18298;
 }
 .mobile-site-nav {
-    margin-top: 19px;      
+  margin-top: 19px;
 }
-.nav-link {     
-    font-family: DM Sans;
-    font-weight: 700;
-    line-height: 1.2857;
+.nav-link {
+  font-family: DM Sans;
+  font-weight: 700;
+  line-height: 1.2857;
 
-    
-    color: $text-color-hero;
-    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  cursor: pointer;
+
+  color: $text-color-hero;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .current,
-.nav-link:hover,
-.nav-limk:focus {
-    color: $title-text-color;
-    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+.nav-limk:focus,
+.nav-link:hover {
+  color: $title-text-color;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .site-nav {
-    display: none;
+  display: none;
 
-    @media screen  and (min-width:1200px){
-        display: flex;
-    }
+  @media screen and (min-width: 1280px) {
+    display: flex;
+  }
 }
 
 .nav-item:not(:last-child) {
-    margin-right: 30px;
+  margin-right: 35px;
+}
+.backdrop,
+.mob-backdrop {
+  position: fixed;
 
-    @media screen  and (min-width:1210px){
-        margin-right: 35px;
+  z-index: 999;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+
+  background-color: rgba(0, 0, 0, 0.2);
+
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.backdrop.is-hidden,
+.mob-backdrop.is-hidden {
+  opacity: 0;
+  visibility: hidden;
+  transform: translateY(+100%);
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  pointer-events: none;
+}
+.order {
+  position: absolute;
+  top: 10%;
+  left: 50%;
+  transform: translate(-50%, -10%);
+
+  width: 300px;
+  height: 90%;
+
+  padding: 0.5%;
+
+  background-color: $background-hero;
+
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+
+  overflow: scroll;
+
+  @media screen and (min-width: 768px) {
+    width: 480px;
+    height: 60%;
+  }
+}
+
+.cl-order-btn {
+  position: absolute;
+  top: 0;
+  right: 0;
+
+  width: 30px;
+  height: 30px;
+
+  background-color: $text-color;
+
+  border: transparent;
+  &:hover,
+  &:focus {
+    background-color: $hover-botton-color;
+  }
+  @media screen and (min-width: 768px) {
+    width: 40px;
+    height: 40px;
+  }
+}
+
+.order_title {
+  text-align: center;
+  font-family: Titan One;
+  font-weight: 400;
+  font-size: 20;
+  line-height: 1.2857;
+
+  color: $text-color-hero;
+
+  @media screen and (min-width: 768px) {
+    font-size: 30;
+  }
+}
+.order_form {
+  width: 100%;
+
+  margin-top: 5%;
+  padding-left: 2%;
+  padding-right: 2%;
+
+  font-family: DM Sans;
+  font-weight: 400;
+  font-size: 14;
+  line-height: 1.2857;
+  letter-spacing: 0.01em;
+
+  color: $text-color-hero;
+
+  align-items: center;
+}
+.label {
+  position: relative;
+
+  display: inline-block;
+
+  width: 100%;
+
+  margin-bottom: 8%;
+}
+.client-data {
+  width: 100%;
+  height: 30px;
+  padding: 8px;
+
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.label-descr {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  left: 2%;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  color: $text-color;
+}
+.client-data:hover,
+.client-data:focus {
+  border: 2px solid $hover-botton-color;
+
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  cursor: pointer;
+}
+.label:hover .label-descr,
+.label:focus .label-descr,
+.label > .client-data:not(:placeholder-shown) + .label-descr {
+  transform: translateY(-190%);
+
+  color: $hover-text-color;
+  font-weight: 700;
+
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.order_text {
+  text-align: center;
+  text-decoration: underline;
+
+  font-weight: 700;
+
+  margin-bottom: 5%;
+
+  @media screen and (min-width: 768px) {
+    font-size: 32;
+  }
+}
+
+.order-choise {
+  width: 100%;
+
+  margin-bottom: 30px;
+  margin-right: auto;
+  margin-left: auto;
+
+  @media screen and (min-width: 768px) {
+    width: 80%;
+  }
+
+  &_label {
+    display: flex;
+    align-items: center;
+
+    width: 100%;
+  }
+
+  &_details {
+    margin-left: 10px;
+
+    font-size: 14;
+
+    @media screen and (min-width: 768px) {
+      font-size: 32;
     }
+  }
+
+  &_portions {
+    margin-left: 10px;
+    font-size: 14;
+
+    display: flex;
+    width: 50%;
+
+    @media screen and (min-width: 768px) {
+      font-size: 32;
+    }
+  }
+}
+.choise-label {
+  width: 45%;
+  display: flex;
+  align-items: center;
+
+  margin-bottom: 10px;
+}
+
+.portions-number {
+  display: inline-block;
+  width: 45px;
+}
+.order-choise_check {
+  margin-left: 10px;
+}
+
+.warning {
+  color: $hover-text-color;
+
+  text-align: center;
+
+  margin-bottom: 10px;
+
+  @media screen and (min-width: 768px) {
+    margin-bottom: 30px;
+  }
+}
+.pay-btn {
+  position: relative;
+  left: 50%;
+  transform: translateX(-50%);
+
+  border: transparent;
+  font-weight: 700;
+
+  &:hover,
+  &:focus {
+    background-color: $hover-botton-color;
+    color: $text-color-hero;
+  }
 }
