--- a/src/sass/layout/_menu.scss
+++ b/src/sass/layout/_menu.scss
@@ -309,11 +309,11 @@
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
 
-  overflow: scroll;
+  overflow: auto;
 
   @media screen and (min-width: 768px) {
     width: 480px;
-    height: 60%;
+    height: 80%;
   }
 }
 
