--- a/src/partials/galery.html
+++ b/src/partials/galery.html
@@ -6,7 +6,7 @@
       <img src="./images/mobile/galery@2x.jpg" alt="Dont worry be happy" width="320" height="200" />
     </picture>
   </div>
-  <div class="container galery-container">
+  <div class="galery-container">
     <ul class="galery-list">
       <li class="galery-item">
         <div class="galery-img galery-img-container">
