--- a/src/sass/_galery.scss
+++ b/src/sass/_galery.scss
@@ -1,11 +1,10 @@
 .galery {
   position: relative;
-  z-index: 1000;
   @media screen and (min-width: 768px) {
-    padding-bottom: 100px;
+    padding-bottom: 130px;
   }
   @media screen and (min-width: 1200px) {
-    padding-bottom: 100px;
+    padding-bottom: 180px;
   }
 }
 .galery-container {
@@ -20,6 +19,8 @@
     left: 0;
     right: 0;
     top: -110%;
+    padding-right: 50px;
+    padding-left: 50px;
   }
   @media screen and (min-width: 1200px) {
     top: -170%;
