--- a/src/sass/layout/_menu.scss
+++ b/src/sass/layout/_menu.scss
@@ -1,7 +1,5 @@
 .head-container {
-    /*position: relative;*/
     padding: 0;
-
 
     height: 502px;
 
@@ -340,11 +338,13 @@
     border-radius: 4px;
    
 
-    overflow: scroll;
-
+    overflow:auto;
+    
     @media screen  and (min-width:768px) {
         width: 480px;
-        height: 60%;
+        height: 80%;
+
+        
         
     }
    
