--- a/src/partials/neader-hero.html
+++ b/src/partials/neader-hero.html
@@ -13,7 +13,7 @@
                 <ul class="site-nav">
                     <li class="nav-item"><a href="index.html" class="nav-link current">Home</a></li>
                     <li class="nav-item"><a href="#about" class="nav-link">About us</a></li>
-                    <li class="nav-item"><a href="#recipy" class="nav-link">How it’s made?</a></li>
+                    <li class="nav-item"><a href="#made" class="nav-link">How it’s made?</a></li>
                     <li class="nav-item"><a href="#products" class="nav-link">Our products</a></li>
                     <li class="nav-item"><a href="#contact" class="nav-link">Contact</a></li> 
                 </ul>
