--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -209,7 +209,6 @@ h6 {
 }
 
 .head-container {
-  /*position: relative;*/
   padding: 0;
   height: 502px;
   display: -webkit-box;
@@ -550,13 +549,13 @@ h6 {
   -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
           box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
-  overflow: scroll;
+  overflow: auto;
 }
 
 @media screen and (min-width: 768px) {
   .order {
     width: 480px;
-    height: 60%;
+    height: 80%;
   }
 }
 
