add button more svg && hover focus transition

--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -27,8 +27,10 @@
             <img class="milk-jug" src="./images/hero/desktop/desktop_milk_1x.png" alt="milk">
             <p class="eco-info-description">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                <a class="eco-info-link-more">
-                    <img class="eco-info-link-more-arrow" src="./images/icons/arrow-right.svg" alt="button more">
+                <a class="link-more-btn eco-info-link-more" href="#" title="show more">
+                    <svg class="link-more-btn-arrow eco-info-link-more-arrow">
+                        <use href="./images/icons/sprite.svg#arrow-right"></use>
+                    </svg>
                 </a>
             </p>
         </div>
