--- a/src/sass/components/_buttons.scss
+++ b/src/sass/components/_buttons.scss
@@ -168,3 +168,33 @@
     margin: 40px 0 0 0;
   }
 }
+
+.link-more-btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  border: none;
+  background: $white-color;
+  transition: 250ms;
+  margin: 0;
+  padding: 0;
+  &:hover,
+  &:focus {
+    background: $button-secondary-hover;
+  }
+}
+
+.link-more-btn-arrow {
+  width: 12px;
+  height: 12px;
+  fill: $accent-color;
+  transition: 250ms;
+
+  .link-more-btn:hover &,
+  .link-more-btn:focus & {
+    fill: $button-primary-hover;
+  }
+}
