fix__shops-container

--- a/src/sass/_shops.scss
+++ b/src/sass/_shops.scss
@@ -1,60 +1,61 @@
-.shops-container {
-  // left: 50%;
-  // top: -84px;
-  // transform: translate(-50%, 0);
-  // position: absolute;
-
-  
-  margin-left: auto;
-  margin-right: auto;
-  width: 100%;
-  
-  @media screen and (min-width: 320px) and (max-width: 767px) {
-    left: 50%;
-    top: -84px;
-    transform: translate(-50%, 0);
-    position: absolute;
-
-    width: 320px;
-    padding-left: 20px;
-    padding-right: 20px;
-  }
-
-  // @media screen and (min-width: 480px) {
-  //   width: 480px;
-  // }
-
-  @media screen and (min-width: 768px) {
-    position: absolute;
-    top: -78px;
-    left: 50%;
-    transform: translate(-50%, 0);
-
-    width: 768px;
-    padding-left: 34px;
-    padding-right: 34px;
-    display: flex;
-    flex-wrap: wrap;
-  }
-  @media screen and (min-width: 1200px) {
-    width: 1200px;
-    padding-left: 75px;
-    padding-right: 75px;
-  }
-}
-
 .shops-bgc {
   background-color: $footer-bg;
   position: relative;
 
   @media screen and (min-width: 320px) and (max-width: 767px) {
-    height: 1511px;
-    margin-top: 170px;
+    // height: 1511px;
+    padding-top: 170px;
   }
-  
+
   @media screen and (min-width: 768px) {
     height: 665px;
-    margin-top: 197px;
+    padding-top: 197px;
+  }
+
+  .shops-container {
+    left: 50%;
+    top: 54px;
+    transform: translate(-50%, 0);
+    position: absolute;
+
+    margin-left: auto;
+    margin-right: auto;
+    width: 100%;
+
+    z-index: 1;
+
+    @media screen and (min-width: 320px) and (max-width: 767px) {
+      left: 50%;
+      // top: -84px;
+      transform: translate(-50%, 0);
+      position: absolute;
+
+      width: 320px;
+      padding-left: 20px;
+      padding-right: 20px;
+    }
+
+    // @media screen and (min-width: 480px) {
+    //   width: 480px;
+    // }
+
+    @media screen and (min-width: 768px) {
+      position: absolute;
+      top: -78px;
+      left: 50%;
+      transform: translate(-50%, 0);
+
+      width: 768px;
+      padding-left: 34px;
+      padding-right: 34px;
+      display: flex;
+      flex-wrap: wrap;
+    }
+    @media screen and (min-width: 1200px) {
+      width: 1200px;
+      padding-left: 75px;
+      padding-right: 75px;
+    }
   }
 }
 
@@ -62,20 +63,19 @@
   display: none;
 }
 
-
 .shops-section {
   width: 220px;
   padding-left: 20px;
   padding-right: 20px;
   padding-top: 43px;
   padding-bottom: 43px;
-  
+
   @media screen and (min-width: 320px) and (max-width: 767px) {
     margin-left: auto;
     margin-right: auto;
   }
 
-  background: #FFFFFF;
+  background: #ffffff;
   box-shadow: 0px 8px 30px rgba(212, 20, 67, 0.1);
   border-radius: 24px;
 
@@ -94,7 +94,7 @@
     &:nth-child(-n + 3) {
       margin-right: 30px;
     }
-  } 
+  }
 }
 
 @media screen and (min-width: 320px) and (max-width: 767px) {
@@ -102,8 +102,6 @@
     margin-bottom: 20px;
   }
 }
-
-
 
 .shops-title {
   font-weight: 500;
@@ -124,7 +122,7 @@
     line-height: 1.86;
     text-align: center;
     margin-bottom: 30px;
-    color: #FFFFFF;
+    color: #ffffff;
   }
 }
 
@@ -147,7 +145,7 @@
     line-height: 1.86;
     text-align: center;
     margin-bottom: 30px;
-    color: #FFFFFF;
+    color: #ffffff;
   }
 }
 
@@ -160,22 +158,22 @@
 
   @media screen and (min-width: 768px) {
     font-weight: 500;
-  font-size: 14px;
-  line-height: 1.86;
+    font-size: 14px;
+    line-height: 1.86;
   }
 
   @media screen and (min-width: 1200px) {
     font-weight: 500;
-  font-size: 16px;
-  line-height: 1.86;
-  }  
+    font-size: 16px;
+    line-height: 1.86;
+  }
 }
 
 .shops-text {
   font-weight: 500;
   font-size: 11px;
   line-height: 1.5;
-  color: #907E82;
+  color: #907e82;
   padding-bottom: 25px;
 
   @media screen and (min-width: 768px) {
@@ -198,30 +196,30 @@
 
   @media screen and (min-width: 768px) {
     font-size: 14px;
-  line-height: 1.86;
-  } 
+    line-height: 1.86;
+  }
 
   @media screen and (min-width: 1200px) {
     font-size: 16px;
-  line-height: 1.86;
-  }  
+    line-height: 1.86;
+  }
 }
 
 .shops-working-hours {
   font-weight: 500;
   font-size: 12px;
   line-height: 1.86;
-  color: #FFA5BA;
+  color: #ffa5ba;
   margin-bottom: 10px;
 
   @media screen and (min-width: 768px) {
     font-size: 14px;
-  line-height: 1.86;
-  } 
+    line-height: 1.86;
+  }
 
   @media screen and (min-width: 1200px) {
     font-size: 16px;
-  line-height: 1.86;
+    line-height: 1.86;
   }
 }
 
@@ -230,28 +228,28 @@
   padding-top: 25px;
   border-top-width: 1px;
   border-top-style: solid;
-  border-top-color: #E1E1E1;
+  border-top-color: #e1e1e1;
 
   @media screen and (min-width: 1200px) {
     padding-top: 32px;
     padding-bottom: 32px;
-  } 
+  }
 }
 
 .shops-contacts {
   font-weight: 500;
   font-size: 12px;
   line-height: 1.5;
-  color: #907E82;
+  color: #907e82;
 
   @media screen and (min-width: 768px) {
     font-size: 14px;
-  line-height: 1.86;
-  } 
+    line-height: 1.86;
+  }
 
   @media screen and (min-width: 1200px) {
     font-size: 16px;
-  line-height: 1.86;
+    line-height: 1.86;
   }
 }
 
@@ -262,7 +260,7 @@
 .shops-contacts-container {
   border-top-width: 1px;
   border-top-style: solid;
-  border-top-color: #E1E1E1;
+  border-top-color: #e1e1e1;
   padding-top: 25px;
 
   @media screen and (min-width: 1200px) {
@@ -288,11 +286,11 @@
 }
 
 .shops-button-2 {
-  background-color: #FFFFFF;
+  background-color: #ffffff;
   font-weight: 700;
   font-size: 16px;
   line-height: 1.3;
-  color: #D41443;
+  color: #d41443;
 
   &:hover,
   &:focus {
@@ -302,7 +300,7 @@
 }
 
 .shops-button-2::after {
-  content: "";
+  content: '';
   display: inline-block;
   width: 8px;
   height: 10px;
@@ -311,11 +309,11 @@
 }
 
 .shops-button-1 {
-  background: #D41342;
+  background: #d41342;
   font-weight: 700;
   font-size: 16px;
   line-height: 1.3;
-  color: #FFFFFF;
+  color: #ffffff;
 
   &:hover,
   &:focus {
@@ -327,7 +325,7 @@
       background-image: url(../images/svg/icon-button_arrow.svg);
     }
   }
-  
+
   @media screen and (min-width: 320px) and (max-width: 767px) {
     margin-bottom: 10px;
   }
@@ -343,7 +341,7 @@
 }
 
 .shops-button-1::after {
-  content: "";
+  content: '';
   display: inline-block;
   width: 8px;
   height: 10px;
@@ -359,6 +357,8 @@
 @media screen and (min-width: 768px) {
   .shops-buttons {
     display: flex;
+
+    margin-top: 81px;
   }
 
   .shops-thumb {
@@ -366,7 +366,6 @@
     width: 549px;
     position: relative;
 
+    margin-top: 86px;
   }
 }
-
-
