Подключил в main sass, относительно спозиционировал секцию

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -19,5 +19,6 @@
 @import './hero/hero-partial';
 @import './made/made';
 @import './mass/mass';
+@import './collage/collage';
 @import './products/products-section';
 
