--- a/src/sass/layouts/_modal.scss
+++ b/src/sass/layouts/_modal.scss
@@ -6,18 +6,30 @@
   bottom: 0;
   background-color: rgba(25, 28, 38, 0.8);
   z-index: 100;
+
+  opacity: 1;
+  transition: opacity 0.5s ease-in;
 }
 .backdrop.is-hidden {
   opacity: 0;
   pointer-events: none;
 }
+
+.is-hidden .modal {
+  transform: translate(-50%, -50%) scale(0.5);
+  transition: transform 0.5s ease-in;
+}
+
 .modal {
   display: flex;
   position: absolute;
 
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
+
+  transform: translate(-50%, -50%) scale(1);
+  transition: transform 0.5s ease-in;
+
   @media screen and (max-width: 480px) {
     max-width: 480px;
     left: 47%;
