--- a/src/sass/_shops.scss
+++ b/src/sass/_shops.scss
@@ -238,7 +238,7 @@
 }
 
 .shops-btn {
-  display: inline-block;
+  display: block;
   margin-right: auto;
   margin-left: auto;
   padding-top: 10px;
@@ -261,6 +261,7 @@
 }
 
 .btn-loc {
+  display: inline-block;
   margin-bottom: 10px;
   border-radius: 22px;
   border-color: transparent;
