нічого не змінено просто перезапущено сасс

--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -49,6 +49,13 @@ img {
   padding-right: 20px;
 }
 
+@media screen and (min-width: 320px) {
+  .container {
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+}
+
 @media screen and (min-width: 768px) {
   .container {
     padding-left: 35px;
@@ -115,8 +122,8 @@ h6 {
 
 .btn:hover,
 .btn:focus {
-  color: #c7133e;
-  background: #ecebeb;
+  color: #ffffff;
+  background: #c7133e;
   -webkit-transition-duration: 350ms;
           transition-duration: 350ms;
   -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
@@ -209,53 +216,64 @@ h6 {
 }
 
 .head-container {
-  position: relative;
-  padding-top: 6px;
-  padding-left: 20px;
+  padding: 0;
   height: 502px;
-  background-image: url("./../images/hero/icecream_mob.png"), url("./../images/hero/ellipse_mob.png");
-  background-repeat: no-repeat;
-  background-position: left 117px bottom 0px, top 92px right 0px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   background-color: #ffb8ca;
 }
 
-@media screen and (min-device-pixel-ratio: 2), screen and (-webkit-min-device-pixel-ratio: 2), screen and (min-resolution: 192dpi), screen and (min-resolution: 2dppx) {
+@media screen and (min-width: 1280px) {
   .head-container {
-    background-image: url("./../images/hero/icecream_mob@2x.png"), url("./../images/hero/ellipse_mob@2x.png");
+    padding: 0;
+    height: 665px;
   }
 }
 
-@media screen and (min-width: 768px) and (max-width: 1199px) {
+@media screen and (min-width: 768px) and (max-width: 1279px) {
   .head-container {
-    padding-top: 37px;
+    padding: 0;
     padding-right: 34px;
     height: 399px;
+  }
+}
+
+.above-container {
+  width: 320px;
+  padding-top: 6px;
+  padding-left: 20px;
+}
+
+@media screen and (max-width: 767px) {
+  .above-container {
+    background-image: url("./../images/hero/icecream_mob.png"), url("./../images/hero/ellipse_mob.png");
+    background-repeat: no-repeat;
+    background-position: left 117px bottom 0px, top 92px right 0px;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1279px) {
+  .above-container {
+    width: 768px;
+    padding-top: 37px;
     background-image: url("./../images/hero/icecream_tablet.png"), url("./../images/hero/ellipse_tablet.png");
     background-repeat: no-repeat;
-    background-position: top 63px right 247px, top 31px right 137px;
+    background-position: top 63px right 214px, top 31px right 103px;
   }
 }
 
-@media screen and (min-width: 768px) and (max-width: 1199px) and (min-device-pixel-ratio: 2), screen and (min-width: 768px) and (max-width: 1199px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 768px) and (max-width: 1199px) and (min-resolution: 192dpi), screen and (min-width: 768px) and (max-width: 1199px) and (min-resolution: 2dppx) {
-  .head-container {
-    background-image: url("./../images/hero/icecream_tablet@2x.png"), url("./../images/hero/ellipse_tablet@2x.png");
-  }
-}
-
-@media screen and (min-width: 1200px) {
-  .head-container {
+@media screen and (min-width: 1280px) {
+  .above-container {
+    width: 1280px;
     padding-top: 37px;
-    height: 665px;
     padding-right: 115px;
     background-image: url("./../images/hero/icecream_desktop.png"), url("./../images/hero/ellipse_desktop.png");
     background-repeat: no-repeat;
     background-position: top 108px right 450px, top 55px right 267px;
-  }
-}
-
-@media screen and (min-width: 1200px) and (min-device-pixel-ratio: 2), screen and (min-width: 1200px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 1200px) and (min-resolution: 192dpi), screen and (min-width: 1200px) and (min-resolution: 2dppx) {
-  .head-container {
-    background-image: url("./../images/hero/icecream_desktop@2x.png"), url("./../images/hero/ellipse_desktop@2x.png");
   }
 }
 
@@ -274,16 +292,16 @@ h6 {
   height: 56px;
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 1280px) {
   .nav {
-    padding-right: 19px;
-    padding-left: 19px;
+    padding-right: 0px;
   }
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 768px) and (max-width: 1279px) {
   .nav {
     padding-right: 0px;
+    padding-left: 19px;
   }
 }
 
@@ -308,7 +326,7 @@ h6 {
           align-items: center;
 }
 
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 1280px) {
   .menu-btn {
     display: none;
   }
@@ -348,7 +366,7 @@ h6 {
   }
 }
 
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 1280px) {
   .buy-btn--nmob {
     margin-right: 0px;
   }
@@ -412,9 +430,9 @@ h6 {
   -webkit-transition-delay: 450ms;
           transition-delay: 450ms;
   padding-bottom: 185px;
-  width: 250px;
+  width: 78.125%;
   height: 502px;
-  background-color: #E17992;
+  background-color: #e17992;
 }
 
 .mobile-menu.is-open {
@@ -428,7 +446,7 @@ h6 {
           transition-delay: 450ms;
 }
 
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 1280px) {
   .mobile-menu.is-open {
     display: none;
   }
@@ -436,7 +454,7 @@ h6 {
 
 @media screen and (min-width: 768px) {
   .mobile-menu {
-    width: 254px;
+    width: 33%;
     height: 1020px;
   }
 }
@@ -445,7 +463,7 @@ h6 {
   padding-top: 11px;
   padding-bottom: 13px;
   padding-left: 21px;
-  border: 1px solid #E18298;
+  border: 1px solid #e18298;
 }
 
 .mobile-site-nav {
@@ -456,14 +474,15 @@ h6 {
   font-family: DM Sans;
   font-weight: 700;
   line-height: 1.2857;
+  cursor: pointer;
   color: #ffffff;
   -webkit-transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .current,
-.nav-link:hover,
-.nav-limk:focus {
+.nav-limk:focus,
+.nav-link:hover {
   color: #d41443;
   -webkit-transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -473,7 +492,7 @@ h6 {
   display: none;
 }
 
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 1280px) {
   .site-nav {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -482,13 +501,261 @@ h6 {
 }
 
 .nav-item:not(:last-child) {
-  margin-right: 30px;
+  margin-right: 35px;
 }
 
-@media screen and (min-width: 1210px) {
-  .nav-item:not(:last-child) {
-    margin-right: 35px;
+.backdrop,
+.mob-backdrop {
+  position: fixed;
+  z-index: 999;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.2);
+  -webkit-transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.backdrop.is-hidden,
+.mob-backdrop.is-hidden {
+  opacity: 0;
+  visibility: hidden;
+  -webkit-transform: translateY(100%);
+          transform: translateY(100%);
+  -webkit-transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  pointer-events: none;
+}
+
+.order {
+  position: absolute;
+  top: 10%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -10%);
+          transform: translate(-50%, -10%);
+  width: 300px;
+  height: 90%;
+  padding: 0.5%;
+  background-color: #ffa5ba;
+  -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+          box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+  overflow: auto;
+}
+
+@media screen and (min-width: 768px) {
+  .order {
+    width: 480px;
+    height: 80%;
   }
+}
+
+.cl-order-btn {
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 30px;
+  height: 30px;
+  background-color: #907e82;
+  border: transparent;
+}
+
+.cl-order-btn:hover, .cl-order-btn:focus {
+  background-color: #c7133e;
+}
+
+@media screen and (min-width: 768px) {
+  .cl-order-btn {
+    width: 40px;
+    height: 40px;
+  }
+}
+
+.order_title {
+  text-align: center;
+  font-family: Titan One;
+  font-weight: 400;
+  font-size: 20;
+  line-height: 1.2857;
+  color: #ffffff;
+}
+
+@media screen and (min-width: 768px) {
+  .order_title {
+    font-size: 30;
+  }
+}
+
+.order_form {
+  width: 100%;
+  margin-top: 5%;
+  padding-left: 2%;
+  padding-right: 2%;
+  font-family: DM Sans;
+  font-weight: 400;
+  font-size: 14;
+  line-height: 1.2857;
+  letter-spacing: 0.01em;
+  color: #ffffff;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.label {
+  position: relative;
+  display: inline-block;
+  width: 100%;
+  margin-bottom: 8%;
+}
+
+.client-data {
+  width: 100%;
+  height: 30px;
+  padding: 8px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  -webkit-transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.label-descr {
+  position: absolute;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+  left: 2%;
+  -webkit-transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  color: #907e82;
+}
+
+.client-data:hover,
+.client-data:focus {
+  border: 2px solid #c7133e;
+  -webkit-transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  cursor: pointer;
+}
+
+.label:hover .label-descr,
+.label:focus .label-descr,
+.label > .client-data:not(:placeholder-shown) + .label-descr {
+  -webkit-transform: translateY(-190%);
+          transform: translateY(-190%);
+  color: #d41443;
+  font-weight: 700;
+  -webkit-transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.order_text {
+  text-align: center;
+  text-decoration: underline;
+  font-weight: 700;
+  margin-bottom: 5%;
+}
+
+@media screen and (min-width: 768px) {
+  .order_text {
+    font-size: 32;
+  }
+}
+
+.order-choise {
+  width: 100%;
+  margin-bottom: 30px;
+  margin-right: auto;
+  margin-left: auto;
+}
+
+@media screen and (min-width: 768px) {
+  .order-choise {
+    width: 80%;
+  }
+}
+
+.order-choise_label {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 100%;
+}
+
+.order-choise_details {
+  margin-left: 10px;
+  font-size: 14;
+}
+
+@media screen and (min-width: 768px) {
+  .order-choise_details {
+    font-size: 32;
+  }
+}
+
+.order-choise_portions {
+  margin-left: 10px;
+  font-size: 14;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 50%;
+}
+
+@media screen and (min-width: 768px) {
+  .order-choise_portions {
+    font-size: 32;
+  }
+}
+
+.choise-label {
+  width: 45%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-bottom: 10px;
+}
+
+.portions-number {
+  display: inline-block;
+  width: 45px;
+}
+
+.order-choise_check {
+  margin-left: 10px;
+}
+
+.warning {
+  color: #d41443;
+  text-align: center;
+  margin-bottom: 10px;
+}
+
+@media screen and (min-width: 768px) {
+  .warning {
+    margin-bottom: 30px;
+  }
+}
+
+.pay-btn {
+  position: relative;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
+  border: transparent;
+  font-weight: 700;
+}
+
+.pay-btn:hover, .pay-btn:focus {
+  background-color: #c7133e;
+  color: #ffffff;
 }
 
 .hero {
@@ -508,7 +775,7 @@ h6 {
   }
 }
 
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 1280px) {
   .hero {
     padding-top: 3px;
     padding-right: 0px;
@@ -522,13 +789,13 @@ h6 {
   }
 }
 
-@media screen and (min-width: 768px) and (max-width: 1199px) {
+@media screen and (min-width: 768px) and (max-width: 1279px) {
   .title-block {
     padding-top: 3px;
   }
 }
 
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 1280px) {
   .title-block {
     padding-top: 84px;
     padding-left: 38px;
@@ -561,7 +828,7 @@ h6 {
   }
 }
 
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 1280px) {
   .hero-title--accent {
     font-size: 58px;
   }
@@ -574,7 +841,7 @@ h6 {
   }
 }
 
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 1280px) {
   .hero-title {
     font-size: 38px;
     line-height: 1.145;
@@ -594,7 +861,7 @@ h6 {
   }
 }
 
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 1280px) {
   .hero-btn-block {
     margin-top: 25px;
   }
@@ -607,16 +874,16 @@ h6 {
   height: 24px;
   font-family: DM Sans;
   font-size: 8px;
-  line-height: 1,25;
+  line-height: 1, 25;
 }
 
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 1280px) {
   .hero-btn-block .btn {
     margin-right: 15px;
     width: 102px;
     height: 40px;
     font-size: 14px;
-    line-height: 1,2857;
+    line-height: 1, 2857;
   }
 }
 
@@ -626,15 +893,15 @@ h6 {
   border: transparent;
   font-family: DM Sans;
   font-size: 8px;
-  line-height: 1,25;
+  line-height: 1, 25;
 }
 
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 1280px) {
   .hero-btn-block .btn2 {
     width: 138px;
     height: 40px;
     font-size: 14px;
-    line-height: 1,2857;
+    line-height: 1, 2857;
   }
 }
 
@@ -655,7 +922,7 @@ h6 {
   }
 }
 
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 1280px) {
   .bio {
     margin-top: 56px;
     height: 191px;
@@ -668,7 +935,7 @@ h6 {
   height: 124px;
 }
 
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 1280px) {
   .milk {
     width: 188px;
     height: 191px;
@@ -693,7 +960,7 @@ h6 {
   }
 }
 
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 1280px) {
   .bio-eco {
     padding-bottom: 11px;
   }
@@ -713,7 +980,7 @@ h6 {
   border: none;
 }
 
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 1280px) {
   .bio-eco .btn-circle {
     width: 26px;
     height: 26px;
@@ -733,7 +1000,7 @@ h6 {
   color: #ffffff;
 }
 
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 1280px) {
   .bio-eco-descr {
     margin-top: 0;
     margin-bottom: 20px;
@@ -748,7 +1015,7 @@ h6 {
   width: 9px;
 }
 
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 1280px) {
   .arrow-icon {
     width: 13px;
   }
@@ -764,7 +1031,7 @@ h6 {
   }
 }
 
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 1280px) {
   .r-block {
     padding-top: 63px;
   }
@@ -790,7 +1057,7 @@ h6 {
   }
 }
 
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 1280px) {
   .sales-points {
     margin-bottom: 90px;
   }
@@ -818,21 +1085,21 @@ h6 {
   border-radius: 50%;
 }
 
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 1280px) {
   .points::before {
     width: 30px;
     height: 30px;
   }
 }
 
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 1280px) {
   .points {
     width: 92px;
     height: 77px;
   }
 }
 
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 1280px) {
   .points {
     height: 76x;
     /*padding-right: 18px;*/
@@ -852,7 +1119,7 @@ h6 {
   color: #d41443;
 }
 
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 1280px) {
   .points-number {
     font-size: 46px;
     line-height: 1.1521;
@@ -868,7 +1135,7 @@ h6 {
   color: #ffffff;
 }
 
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 1280px) {
   .points-title {
     margin-top: 2px;
     font-size: 14px;
@@ -880,7 +1147,7 @@ h6 {
   margin-bottom: 14px;
 }
 
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 1280px) {
   .caffee {
     margin-bottom: 30px;
   }
@@ -892,7 +1159,7 @@ h6 {
   height: 133px;
 }
 
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 1280px) {
   .girl {
     width: 293px;
     height: 232px;
@@ -1224,6 +1491,7 @@ h6 {
   display: block;
   width: 100%;
   margin-bottom: 47px;
+  z-index: 5;
 }
 
 @media screen and (min-width: 768px) {
@@ -1246,6 +1514,7 @@ h6 {
 
 .hm-description {
   padding: 0 30px;
+  z-index: 5;
   font-weight: 500;
   font-size: 12px;
   line-height: 1.62;
@@ -1269,7 +1538,6 @@ h6 {
     font-size: 16px;
     line-height: 1.76;
     padding-top: 47px;
-    z-index: 5;
   }
 }
 
@@ -1695,12 +1963,45 @@ h6 {
   display: inline-block;
   width: 12.4px;
   height: 11.84px;
-  list-style-type: none;
+}
+
+#slides {
+  position: relative;
+  min-height: 541px;
+}
+
+@media screen and (min-width: 768px) {
+  #slides {
+    min-height: 382px;
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  #slides {
+    min-height: 350px;
+  }
+}
+
+.slide {
+  position: absolute;
+  left: 0px;
+  top: 0px;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+  z-index: 1;
+  -webkit-transition: opacity 1s;
+  transition: opacity 1s;
+}
+
+.showing {
+  opacity: 1;
+  z-index: 2;
 }
 
 .overley {
   position: relative;
-  background: linear-gradient(to bottom, #ffffff 84px, #fff5f6 84px);
+  background: linear-gradient(to bottom, #ffffff 90px, #fff5f6 90px);
 }
 
 .contact-item {
@@ -1843,6 +2144,9 @@ h6 {
 }
 
 @media screen and (min-width: 768px) {
+  .overley {
+    background: linear-gradient(to bottom, #ffffff 60px, #fff5f6 60px);
+  }
   .contact-list {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -1860,6 +2164,9 @@ h6 {
 }
 
 @media screen and (min-width: 1200px) {
+  .overley {
+    background: linear-gradient(to bottom, #ffffff 90px, #fff5f6 90px);
+  }
   .contact-item:not(:last-child) {
     margin-right: 30px;
   }
@@ -1896,8 +2203,8 @@ h6 {
     -webkit-transform: translate(0, -50%);
             transform: translate(0, -50%);
     width: 100%;
-    height: 333px;
     background-image: url(../images/section5/img51-desktop.png);
+    background-image: url(../images/section5/img51-desktop@2x.png);
     background-size: cover;
     background-repeat: no-repeat;
   }
